--- a/pages/covid19sjc/public/index.html
+++ b/pages/covid19sjc/public/index.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="style.css">
         <title>Covid-19 em São José dos Campos</title>
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script> -->
     </head>
     <body>
         <div class="container">
@@ -25,16 +24,63 @@
             </div>
             <br>
             
-            <div class="chart-container" style="position: relative; height: 60vh; width: 90vw;">
-                <canvas id="covid-sjc"></canvas>
+            <div class="chart-container">
+                <canvas id="total-cases"></canvas>
+                <br>
+                <canvas id="by-district"></canvas>
             </div>
+            <!-- <div class="district-table">
+                <table style="width: 100%;">
+                    <tr>
+                        <td>Jd Aquarius</td>
+                        <td>27</td>
+                        <td>24%</td>
+                    </tr>
+                    <tr>
+                        <td>Urbanova</td>
+                        <td>20</td>
+                        <td>18%</td>
+                    </tr>
+                    <tr>
+                        <td>Bq Eucaliptos</td>
+                        <td>15</td>
+                        <td>13%</td>
+                    </tr>
+                    <tr>
+                        <td>Pq Industrial</td>
+                        <td>15</td>
+                        <td>13%</td>
+                    </tr>
+                    <tr>
+                        <td>Centro</td>
+                        <td>15</td>
+                        <td>13%</td>
+                    </tr>
+                    <tr>
+                        <td>Jd Satelite</td>
+                        <td>12</td>
+                        <td>11%</td>
+                    </tr>
+                    <tr>
+                        <td>Vl Adyana</td>
+                        <td>10</td>
+                        <td>09%</td>
+                    </tr>
+                    <tr>
+                        <td>Demais Bairros</td>
+                        <td>249</td>
+                        <td>69%</td>
+                    </tr>
+                </table>
+            </div> -->
             
-            <script src="chartIt.js"></script>
-            <script src="scripts.js"></script>
+            <script src="totalCases.js"></script>
+            <script src="byDistrict.js"></script>
+            <script src="theme.js"></script>
         </div>
     </body>
     <br>
-    <footer>
+    <footer class="footer">
         <p>&copy; <a href="http://danbuck84.github.io/" target="_blank">Daniel Buck</a>, Maio de 2020.</p>
     </footer>
     </html>
