adding occupancyRate.js and updating data.csv

--- a/pages/covid19sjc/public/index.html
+++ b/pages/covid19sjc/public/index.html
@@ -31,9 +31,12 @@
                 <canvas id="total-cases"></canvas>
                 <br>
                 <canvas id="by-district"></canvas>
+                <br>
+                <canvas id="occupancy-rate"></canvas>
             </div>
             <script src="totalCases.js"></script>
             <script src="byDistrict.js"></script>
+            <script src="occupancyRate.js"></script>
             <script src="theme.js"></script>
             <script src="date.js"></script>
         </div>
