--- a/pages/covid19sjc/public/index.html
+++ b/pages/covid19sjc/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="sticky-top">
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-            <a class="navbar-brand">Covid-19 em São José dos Campos (<output id="date"></output>)</a>
+            <a class="navbar-brand">Covid-19 em São José dos Campos, última atualização: 26/05/2020</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -88,7 +88,6 @@
         <script src="../public/casesByGender.js"></script>
         <script src="../public/casesByAge.js"></script>
         <script src="../public/confirmedDown.js"></script>
-        <script src="date.js"></script>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
