--- a/pages/covid19sjc/public/index.html
+++ b/pages/covid19sjc/public/index.html
@@ -13,7 +13,8 @@
 <body>
     <div class="sticky-top">
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-            <a class="navbar-brand">Covid-19 em São José dos Campos, última atualização: 26/05/2020</a>
+            <a class="navbar-brand">Covid-19 em São José dos Campos</a>
+            <p>última atualização: 27/05/2020</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
