general update with the week's wrap up numbers

--- a/pages/covid19sjc/public/index.html
+++ b/pages/covid19sjc/public/index.html
@@ -14,7 +14,7 @@
     <div class="sticky-top">
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
             <a class="navbar-brand">Covid-19 em São José dos Campos</a>
-            <p>última atualização: 27/05/2020</p>
+            <p>última atualização: 29/05/2020 às 18:00</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,18 +44,18 @@
             <tbody>
                 <tr>
                     <th scope="row">São José dos Campos</th>
-                    <td>5.62%</td>
-                    <td>4.90%</td>
+                    <td>6.75%</td>
+                    <td>4.27%</td>
                 </tr>
                 <tr>
                     <th scope="row">Estado de São Paulo</th>
-                    <td>13.12%</td>
-                    <td>7.51%</td>
+                    <td>15.86%</td>
+                    <td>7.28%</td>
                 </tr>
                 <tr>
                     <th scope="row">Brasil</th>
-                    <td>10.12%</td>
-                    <td>6.36%</td>
+                    <td>12.77%</td>
+                    <td>6.10%</td>
                 </tr>
             </tbody>
         </table>
