--- a/pages/covid19sjc/public/index.html
+++ b/pages/covid19sjc/public/index.html
@@ -14,7 +14,7 @@
     <div class="sticky-top">
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
             <a class="navbar-brand">Covid-19 em São José dos Campos</a>
-            <p>última atualização: 06/06/2020 às 8:20</p>
+            <p>última atualização: 06/06/2020 às 16:20</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -99,7 +99,7 @@
 <footer class="footer mt-auto" style="background-color: #e3f2fd;">
     <div class="container">
       <span class="text-muted">
-        <p>&copy; <a href="http://danbuck84.github.io/" target="_blank">Daniel Buck</a>, Maio de 2020.</p>
+        <p>&copy; <a href="http://danbuck84.github.io/" target="_blank">Daniel Buck</a>, Junho de 2020.</p>
       </span>
     </div>
 </footer>
