--- a/pages/covid19sjc/public/index.html
+++ b/pages/covid19sjc/public/index.html
@@ -15,7 +15,7 @@
     <div class="sticky-top">
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
             <a class="navbar-brand">Covid-19 em São José dos Campos</a>
-            <p>última atualização: 23/07/2020 às 18:10</p>
+            <p>última atualização: 28/07/2020 às 21:30</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,18 +40,18 @@
             <tbody>
                 <tr>
                     <th scope="row">São José dos Campos</th>
-                    <td>23.96%</td>
-                    <td>3.06%</td>
+                    <td>26.59%</td>
+                    <td>2.99%</td>
                 </tr>
                 <tr>
                     <th scope="row">Estado de São Paulo</th>
-                    <td>44.71%</td>
-                    <td>4.67%</td>
+                    <td>42.36%</td>
+                    <td>3.57%</td>
                 </tr>
                 <tr>
                     <th scope="row">Brasil</th>
-                    <td>39.60%</td>
-                    <td>3.72%</td>
+                    <td>47.20%</td>
+                    <td>4.44%</td>
                 </tr>
             </tbody>
         </table>
@@ -135,13 +135,13 @@
             <br>
             <br>
 
-            <!-- <h1 id="down-detailed">Óbitos Detalhados</h1>
+            <h1 id="down-detailed">Óbitos Detalhados</h1>
             <br>
 
             <h6>Óbitos de COVID-19 por sexo e faixa etária</h6>
             <canvas id="confirmed-down"></canvas>
             <span>Fonte: <a href="https://www.sjc.sp.gov.br/servicos/saude/coronavirus/informe-epidemiologico/" target="_blank">REDCAP, E-SUS e SIVEP GRIPE</a></span>
-            <br> -->
+            <br>
 
             <hr>
 
