updating proper files with today's new figures

--- a/pages/covid19sjc/public/index.html
+++ b/pages/covid19sjc/public/index.html
@@ -15,7 +15,7 @@
     <div class="sticky-top">
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
             <a class="navbar-brand">Covid-19 em São José dos Campos</a>
-            <p>última atualização: 31/07/2020 às 18:30</p>
+            <p>última atualização: 04/08/2020 às 18:30</p>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,18 +40,18 @@
             <tbody>
                 <tr>
                     <th scope="row">São José dos Campos</th>
-                    <td>26.87%</td>
-                    <td>2.92%</td>
+                    <td id="mortality-sjc">30.47%</td>
+                    <td id="lethality-sjc">2.86%</td>
                 </tr>
                 <tr>
                     <th scope="row">Estado de São Paulo</th>
-                    <td>43.67%</td>
-                    <td>3.50%</td>
+                    <td id="mortality-sp">50.88%</td>
+                    <td id="lethality-sp">4.17%</td>
                 </tr>
                 <tr>
                     <th scope="row">Brasil</th>
-                    <td>49.46%</td>
-                    <td>4.29%</td>
+                    <td id="mortality-br">45.29%</td>
+                    <td id="lethality-br">3.44%</td>
                 </tr>
             </tbody>
         </table>
